src/codegen/tests/snapshots/codegen@bad_l_value.input.snap
---
source: src/codegen/mod.rs
assertion_line: 712
expression: ir
input_file: src/codegen/tests/inputs/bad_l_value.input
---
- Expected LHS to be a variable for assignment

