src/codegen/tests/snapshots/codegen@basic.input.snap
---
source: src/codegen/mod.rs
assertion_line: 689
expression: ir
input_file: src/codegen/tests/inputs/basic.input
---
- "define i32 @main() {\nentry:\n  ret i32 80\n}\n"

