src/codegen/tests/snapshots/codegen@block.input.snap
---
source: src/codegen/mod.rs
assertion_line: 796
expression: ir
input_file: src/codegen/tests/inputs/block.input
---
- - "fn main() { { 10 + 2; 1.0; 5 } }"
  - "define i32 @main() {\nentry:\n  ret i32 5\n}\n"

