src/codegen/tests/snapshots/codegen@cond.input.snap
---
source: src/codegen/mod.rs
assertion_line: 674
expression: code_to_string(codegen.walk(&ast))
input_file: src/codegen/tests/inputs/cond.input
---
"define void @main() {\nentry:\n  %call_plus_one = call i64 @plus_one(i64 6)\n  ret void\n}\n"

