src/codegen/tests/snapshots/codegen@for.input.snap
---
source: src/codegen/mod.rs
assertion_line: 871
expression: ir
input_file: src/codegen/tests/inputs/for.input
---
- "define void @main() {\nentry:\n  br label %for.loop\n\nfor.loop:                                         ; preds = %for.loop, %entry\n  %y1 = phi i64 [ %for.int.step, %for.loop ], [ 0, %entry ]\n  %call_putchar = call i64 @putchar(i64 46)\n  %lgt.int = icmp ult i64 %y1, 3\n  %for.int.step = add i64 %y1, 1\n  br i1 %lgt.int, label %for.loop, label %for.after\n\nfor.after:                                        ; preds = %for.loop\n  %call_putchar4 = call i64 @putchar(i64 10)\n  ret void\n}\n"

