src/codegen/tests/snapshots/codegen@for.lt.snap
---
source: src/codegen/mod.rs
assertion_line: 811
expression: ir
input_file: src/codegen/tests/inputs/for.lt
---
- - "extern putchar(x: int) -> int\nfn main() {\n    let x: int = 3\n    for y: int = 0; y < x; 1 {\n        putchar(46)\n    }\n    putchar(10)\n}\n"
  - "define i32 @main() {\nentry:\n  br label %for.loop\n\nfor.loop:                                         ; preds = %for.loop, %entry\n  %y1 = phi i32 [ %for.int.step, %for.loop ], [ 0, %entry ]\n  %call_putchar = call i32 @putchar(i32 46)\n  %slt.int = icmp slt i32 %y1, 3\n  %for.int.step = add i32 %y1, 1\n  br i1 %slt.int, label %for.loop, label %for.after\n\nfor.after:                                        ; preds = %for.loop\n  %call_putchar4 = call i32 @putchar(i32 10)\n  ret i32 %call_putchar4\n}\n"

